<resources>
    <string name="app_name">TrainingTimer</string>
    <string name="training_pulls">pull-ups</string>
    <string name="training_pushes">push-ups</string>
    <string name="training_title_hint">Enter training title</string>
    <string name="training_title_label">Title</string>
    <string name="training_sets_hint">Enter number of sets</string>
    <string name="training_sets">10</string>
    <string name="training_times_hint">Enter number of times</string>
    <string name="training_times">x3</string>
    <string name="training_rest_hint">Enter rest time</string>
    <string name="training_rest">00:00</string>
    <string name="training_done">Set done</string>
    <string name="timer_done">done!</string>
    <string name="training_save">Save training</string>
    <string name="new_training">New Training</string>
    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time : </string>
    <string name="error_input_sets">Invalid sets</string>
    <string name="error_input_title">Invalid title</string>
    <string name="error_input_times">Invalid times</string>
    <string name="channel_name">notifyChanel</string>
    <string name="channel_description">chanel for notifications</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="calendar_title">Jan 1999</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="day">1</string>
</resources>