<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/training_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_title_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/training_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_sets" />

        <TextView
            android:id="@+id/training_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_times" />

        <TextView
            android:id="@+id/training_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/training_rest" />

    </LinearLayout>

</LinearLayout>