<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_title_label"/>

    <EditText
        android:id="@+id/training_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/training_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_sets"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_times"/>

    <Button
        android:id="@+id/training_rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="set done"/>

</LinearLayout>